OrderController - added updateOrder, addProductToOrder, removeProductFromOrder - everything works in postman! :)