@@ -1,16 +1,13 @@
 package com.kodilla.ecommercee.mapper;
 
-import com.kodilla.ecommercee.domain.Cart;
-import com.kodilla.ecommercee.domain.CartDto;
-import com.kodilla.ecommercee.domain.Product;
-import com.kodilla.ecommercee.domain.User;
+import com.kodilla.ecommercee.domain.*;
 import com.kodilla.ecommercee.exception.CartNotFoundException;
 import com.kodilla.ecommercee.exception.UserNotFoundException;
 import com.kodilla.ecommercee.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
-import java.util.stream.Collectors;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
@@ -28,7 +25,13 @@ public class CartMapper {
     }
 
     public CartDto mapToCartDto(final Cart cart) {
-        return new CartDto(cart.getId(), cart.getUser().getId(), cart.getProducts().stream()
-                .map(Product::getId).collect(Collectors.toList()), cart.isActive());
+        List<Long> cartProductsIds = cart.getProducts().stream()
+                .map(Product::getId)
+                .toList();
+        return new CartDto(
+                cart.getId(),
+                cart.getUser().getId(),
+                cartProductsIds,
+                cart.isActive());
     }
 }
